compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_module_from_expr_recursive_constructor-3.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "import mod\nfn func() {let _: mod.GenericType(mod.Type) = mod.Node(mod.Variant1, mod.Leaf)}"
---
----- BEFORE RENAME
-- mod.gleam
pub fn fn1() { Nil }
pub const const1 = 5
pub const const2 = <<0:8>>
pub const const3 = "Hello"
pub type Type { Variant1 Variant2(Int) }
pub type GenericType(inner) { Node(inner, GenericType(inner)) Leaf }

-- app.gleam
import mod
fn func() {let _: mod.GenericType(mod.Type) = mod.Node(mod.Variant1, mod.Leaf)}
                                                                     ↑▔▔       


----- AFTER RENAME
-- mod.gleam
pub fn fn1() { Nil }
pub const const1 = 5
pub const const2 = <<0:8>>
pub const const3 = "Hello"
pub type Type { Variant1 Variant2(Int) }
pub type GenericType(inner) { Node(inner, GenericType(inner)) Leaf }

-- app.gleam
import mod as module
fn func() {let _: module.GenericType(module.Type) = module.Node(module.Variant1, module.Leaf)}
